--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,4 +23,11 @@
         android:layout_centerVertical="true"
         android:gravity="center"/>
 
+    <Button
+        android:id="@+id/toms"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"/>
+
+
 </RelativeLayout>
