--- a/app/src/main/res/layout/muslimshalat.xml
+++ b/app/src/main/res/layout/muslimshalat.xml
@@ -1,177 +1,173 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
+
+<TableLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="15dp">
+
+
+    <TextView
+        android:background="#0086c3"
+        android:id="@+id/btncity2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="10dp">
+        android:textSize="20sp"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    <TableLayout
+        android:stretchColumns="1">
 
-            <TextView
-                android:id="@+id/edtxt"
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <TableRow
+            android:background="#0069c0"
+            android:padding="2dp">
             <TextView
                 android:id="@+id/loc"
                 android:text="@string/location"
-                android:layout_weight="1"
+                android:textSize="18sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
             <TextView
                 android:id="@+id/textloc"
-                android:text="@string/myloc"
-                android:layout_weight="1"
+                android:textSize="18sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
-        </LinearLayout>
+        </TableRow>
 
-        <LinearLayout
+        <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="#0086c3">
             <TextView
                 android:id="@+id/date"
                 android:text="@string/date"
-                android:layout_weight="1"
+                android:textSize="18sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
             <TextView
                 android:id="@+id/textdate"
-                android:text="@string/date"
-                android:layout_weight="1"
+                android:textSize="18sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
-        </LinearLayout>
+        </TableRow>
+
+    </TableLayout>
 
         <TextView
             android:textAlignment="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/prayer_time"
-            android:textSize="30sp"
+            android:textSize="35sp"
             android:textStyle="bold"/>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    <TableLayout
+        android:layout_width="369dp"
+        android:layout_height="wrap_content"
+        android:stretchColumns="*">
+
+        <TableRow android:background="#003c8f">
 
             <TextView
                 android:id="@+id/subuh"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/subuh"
+                android:textColor="#FFFF"
                 android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textsbh"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="155dp"
-                android:layout_marginLeft="155dp"
-                android:layout_toEndOf="@id/subuh"
-                android:layout_toRightOf="@id/subuh"
-                android:text="@string/subuh"
-                android:textSize="20sp" />
+                android:layout_marginStart="120dp"
+                android:layout_marginLeft="120dp"
+                android:textColor="#FFFF"
+                android:textSize="20sp"/>
+        </TableRow>
+
+        <TableRow android:background="#001064">
 
             <TextView
                 android:id="@+id/dzuhur"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/subuh"
                 android:text="@string/dzuhur"
+                android:textColor="#FFFF"
                 android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textdzh"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/subuh"
-                android:layout_marginStart="148dp"
-                android:layout_marginLeft="148dp"
-                android:layout_marginTop="0dp"
-                android:layout_toEndOf="@id/dzuhur"
-                android:layout_toRightOf="@id/dzuhur"
-                android:text="@string/dzuhur"
-                android:textSize="20sp" />
+                android:layout_marginStart="120dp"
+                android:layout_marginLeft="120dp"
+                android:textColor="#FFFF"
+                android:textSize="20sp"/>
+        </TableRow>
+
+        <TableRow android:background="#003c8f">
 
             <TextView
                 android:id="@+id/ashar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/dzuhur"
                 android:text="@string/ashar"
+                android:textColor="#FFFF"
                 android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textash"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/dzuhur"
-                android:layout_marginStart="159dp"
-                android:layout_marginLeft="159dp"
-                android:layout_marginTop="1dp"
-                android:layout_toEndOf="@id/ashar"
-                android:layout_toRightOf="@id/ashar"
-                android:text="@string/ashar"
+                android:layout_marginStart="120dp"
+                android:layout_marginLeft="120dp"
+                android:textColor="#FFFF"
                 android:textSize="20sp" />
+        </TableRow>
+
+        <TableRow android:background="#001064">
 
             <TextView
                 android:id="@+id/magrib"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/ashar"
                 android:text="@string/maghrib"
+                android:textColor="#FFFF"
                 android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textmgh"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/ashar"
-                android:layout_marginStart="137dp"
-                android:layout_marginLeft="137dp"
-                android:layout_marginTop="0dp"
-                android:layout_toEndOf="@id/magrib"
-                android:layout_toRightOf="@id/magrib"
-                android:text="@string/maghrib"
+                android:layout_marginStart="120dp"
+                android:layout_marginLeft="120dp"
+                android:textColor="#FFFF"
                 android:textSize="20sp" />
+        </TableRow>
+
+        <TableRow android:background="#003c8f">
 
             <TextView
                 android:id="@+id/isya"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/magrib"
                 android:text="@string/isya"
-                android:textSize="20sp" />
+                android:textColor="#FFFF"
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/textisy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/magrib"
-                android:layout_marginStart="177dp"
-                android:layout_marginLeft="177dp"
-                android:layout_marginTop="2dp"
-                android:layout_toEndOf="@id/isya"
-                android:layout_toRightOf="@id/isya"
-                android:text="@string/isya"
+                android:layout_marginStart="120dp"
+                android:layout_marginLeft="120dp"
+                android:textColor="#FFFF"
                 android:textSize="20sp" />
-        </RelativeLayout>
+        </TableRow>
+    </TableLayout>
 
-    </LinearLayout>
-
-</ScrollView>
+</TableLayout>
