--- a/app/src/main/res/layout/muslimshalat.xml
+++ b/app/src/main/res/layout/muslimshalat.xml
@@ -1,36 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<TableLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="15dp">
+    android:background="@drawable/bgcolor">
+
+    <TableLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="15dp"
+        android:background="@drawable/bgcolor">
 
 
     <TextView
-        android:background="#0086c3"
+        android:background="@drawable/buttonslec"
         android:id="@+id/btncity2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"/>
+        android:textSize="13sp"/>
 
     <TableLayout
         android:stretchColumns="1">
 
         <TableRow
-            android:background="#0069c0"
-            android:padding="2dp">
+            android:background="@drawable/buttonslec2"
+            android:padding="10dp">
             <TextView
                 android:id="@+id/loc"
                 android:text="@string/location"
-                android:textSize="18sp"
+                android:textSize="13sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
             <TextView
                 android:id="@+id/textloc"
-                android:textSize="18sp"
+                android:textSize="13sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
@@ -39,17 +46,17 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#0086c3">
+            android:background="@drawable/buttonslec">
             <TextView
                 android:id="@+id/date"
                 android:text="@string/date"
-                android:textSize="18sp"
+                android:textSize="13sp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/textdate"
-                android:textSize="18sp"
+                android:textSize="13sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
         </TableRow>
@@ -61,23 +68,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/prayer_time"
-            android:textSize="35sp"
-            android:textStyle="bold"/>
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:background="@drawable/buttonslec5"/>
 
     <TableLayout
         android:layout_width="369dp"
-        android:layout_height="wrap_content"
-        android:stretchColumns="*">
+        android:layout_height="wrap_content">
 
-        <TableRow android:background="#003c8f">
+        <TableRow android:background="@drawable/buttonslec3">
 
             <TextView
                 android:id="@+id/subuh"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/subuh"
-                android:textColor="#FFFF"
-                android:textSize="20sp" />
+                android:textSize="13sp" />
 
             <TextView
                 android:id="@+id/textsbh"
@@ -85,39 +91,38 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="120dp"
                 android:layout_marginLeft="120dp"
-                android:textColor="#FFFF"
-                android:textSize="20sp"/>
+                android:textSize="13sp"/>
         </TableRow>
 
-        <TableRow android:background="#001064">
+        <TableRow android:background="@drawable/buttonslec4">
 
             <TextView
                 android:id="@+id/dzuhur"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/dzuhur"
-                android:textColor="#FFFF"
-                android:textSize="20sp" />
+                android:textSize="13sp" />
 
             <TextView
                 android:id="@+id/textdzh"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="120dp"
-                android:layout_marginLeft="120dp"
-                android:textColor="#FFFF"
-                android:textSize="20sp"/>
+                android:layout_marginStart="110dp"
+                android:layout_marginLeft="110dp"
+                android:textSize="13sp" />
         </TableRow>
 
-        <TableRow android:background="#003c8f">
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/buttonslec3">
 
             <TextView
                 android:id="@+id/ashar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/ashar"
-                android:textColor="#FFFF"
-                android:textSize="20sp" />
+                android:textSize="13sp" />
 
             <TextView
                 android:id="@+id/textash"
@@ -125,19 +130,17 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="120dp"
                 android:layout_marginLeft="120dp"
-                android:textColor="#FFFF"
-                android:textSize="20sp" />
+                android:textSize="13sp" />
         </TableRow>
 
-        <TableRow android:background="#001064">
+        <TableRow android:background="@drawable/buttonslec4">
 
             <TextView
                 android:id="@+id/magrib"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/maghrib"
-                android:textColor="#FFFF"
-                android:textSize="20sp" />
+                android:textSize="13sp" />
 
             <TextView
                 android:id="@+id/textmgh"
@@ -145,19 +148,17 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="120dp"
                 android:layout_marginLeft="120dp"
-                android:textColor="#FFFF"
-                android:textSize="20sp" />
+                android:textSize="13sp" />
         </TableRow>
 
-        <TableRow android:background="#003c8f">
+        <TableRow android:background="@drawable/buttonslec3">
 
             <TextView
                 android:id="@+id/isya"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/isya"
-                android:textColor="#FFFF"
-                android:textSize="20sp"/>
+                android:textSize="13sp"/>
 
             <TextView
                 android:id="@+id/textisy"
@@ -165,9 +166,16 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="120dp"
                 android:layout_marginLeft="120dp"
-                android:textColor="#FFFF"
-                android:textSize="20sp" />
+                android:textSize="13sp" />
         </TableRow>
     </TableLayout>
-
 </TableLayout>
+
+    <include
+        layout="@layout/bottomnav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+</RelativeLayout>
